--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "parcel": "^1.12.4",
     "sass": "^1.26.3"
+  },
+  "dependencies": {
+    "mixins.scss": "^3.0.0"
   }
 }
